第二次提交

--- a/app.json
+++ b/app.json
@@ -1,6 +1,40 @@
 {
   "pages": [
-    "pages/home/home"
+    "pages/home/home",
+    "pages/category/category",
+    "pages/cart/cart",
+    "pages/homepage/homepage"
   ],
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "window": {
+    "navigationBarBackgroundColor": "#ff5777",
+    "navigationBarTextStyle": "black",
+    "navigationBarTitleText": "购物街",
+    "backgroundColor": "#bfa",
+    "backgroundTextStyle": "dark",
+    "enablePullDownRefresh": true
+  },
+  "tabBar": {
+    "list": [{
+      "pagePath": "pages/home/home",
+      "text": "首页",
+      "iconPath": "./assets/ic_menu_choice_nor.png",
+      "selectedIconPath": "./assets/ic_menu_choice_pressed.png"
+    },{
+      "pagePath": "pages/category/category",
+      "text": "分类",
+      "iconPath": "./assets/ic_menu_sort_nor.png",
+      "selectedIconPath": "./assets/ic_menu_sort_pressed.png"
+    },{
+      "pagePath": "pages/cart/cart",
+      "text": "购物车",
+      "iconPath": "./assets/ic_menu_shoping_nor.png",
+      "selectedIconPath": "./assets/ic_menu_shoping_pressed.png"
+    },{
+      "pagePath": "pages/homepage/homepage",
+      "text": "我的",
+      "iconPath": "./assets/ic_menu_me_nor.png",
+      "selectedIconPath": "./assets/ic_menu_me_pressed.png"
+    }]
+  }
 }
